    creating the WebAuth context from an existing APR pool).
  * Switch to xz compression for the upstream and Debian tarballs and for
    the data element of the generated binary packages.
  * Move single-debian-patch to local-options and patch-header to
    local-patch-header so that they only apply to the packages I build and
    NMUs get regular version-numbered patches.

 -- Russ Allbery <rra@debian.org>  Fri, 13 Jul 2012 13:33:39 -0700

webauth (4.1.1-1) unstable; urgency=low

  * New upstream release (no Apache 2.4 support yet; that's next).
    - Fix webauth_user_info bug in interpreting login history timestamps.
    - Fix login history timestamp handling in sample confirm template.
    - Suppress history and token rights in sample confirm template when
      those data elements are empty.  (Closes: #664735)
    - Add explicit HTML filters to all sample template variable
      interpolations as an additional security measure.
    - Update the mod_webkdc manual for changes in 4.1.0.
  * If Apache is running and has the module loaded, restart Apache on
    configure of libapache2-webauth or libapache2-webkdc.
  * Remove the conditional around the postinst actions for
    libapache2-webauth and libapache2-webkdc and just always configure the
    package.  This is at least arguably more correct for the various abort
    cases, is simpler, and shouldn't hurt.

 -- Russ Allbery <rra@debian.org>  Wed, 25 Apr 2012 14:41:39 -0700

webauth (4.1.0-1) unstable; urgency=low

  * New upstream release.
    - New mod_webkdc WebKdcUserInfoTimeout option to set a network timeout
      for user information service queries.  The new default is 30
      seconds.
    - New mod_webkdc WebKdcUserInfoIgnoreFail error to allow users to
      authenticate with password and use pre-existing single sign-on
      cookies even if the user information service is down.  Be aware that
      this can allow bypassing a centrally-mandated multifactor
      requirement.