@@ -2,7 +2,7 @@ Source: webauth
 Section: web
 Priority: optional
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 8), apache2-threaded-dev (>= 2.2),
+Build-Depends: debhelper (>= 9), apache2-threaded-dev (>= 2.2),
  libapr1-dev, libaprutil1-dev, libcgi-application-perl,
  libcgi-application-perl (>= 4.50) |
  libcgi-application-basic-plugin-bundle-perl,
